--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -1,46 +1,26 @@
-name: 🚀 数据库部署到阿里云
+name: 🚀 数据库增量部署到阿里云
 
 on:
   push:
     branches: [ main, master ]
     paths:
-      - 'database.sql'
       - 'src/**'
       - '.github/workflows/deploy-database.yml'
+      - '.env'
   workflow_dispatch:
     inputs:
-      deploy_type:
-        description: '部署类型'
+      auto_execute:
+        description: '是否自动执行部署'
         required: true
-        default: 'incremental'
+        default: 'true'
         type: choice
         options:
-          - incremental
-          - full
-      source_env:
-        description: '源环境'
-        required: true
-        default: 'development'
-        type: choice
-        options:
-          - development
-          - test
-          - staging
-          - production
-      target_env:
-        description: '目标环境'
-        required: true
-        default: 'production'
-        type: choice
-        options:
-          - development
-          - test
-          - staging
-          - production
-      database_file:
-        description: '数据库文件路径（仅用于完整部署）'
+          - 'true'
+          - 'false'
+      output_file:
+        description: '输出SQL文件路径（可选）'
         required: false
-        default: 'database.sql'
+        default: ''
 
 jobs:
   deploy-database:
@@ -59,24 +39,15 @@ jobs:
     - name: 📦 安装依赖
       run: npm install
 
-    - name: 🔍 检查部署类型
+    - name: 🔍 检查部署配置
       run: |
-        DEPLOY_TYPE="${{ github.event.inputs.deploy_type || 'incremental' }}"
-        SOURCE_ENV="${{ github.event.inputs.source_env || 'development' }}"
-        TARGET_ENV="${{ github.event.inputs.target_env || 'production' }}"
+        AUTO_EXECUTE="${{ github.event.inputs.auto_execute || 'true' }}"
+        OUTPUT_FILE="${{ github.event.inputs.output_file || '' }}"
         
-        echo "🚀 部署类型: $DEPLOY_TYPE"
-        echo "📤 源环境: $SOURCE_ENV"
-        echo "📥 目标环境: $TARGET_ENV"
-        
-        if [ "$DEPLOY_TYPE" = "full" ]; then
-          DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
-          if [ ! -f "$DB_FILE" ]; then
-            echo "❌ 数据库文件不存在: $DB_FILE"
-            exit 1
-          fi
-          echo "✅ 找到数据库文件: $DB_FILE"
-          ls -la "$DB_FILE"
+        echo "🚀 增量部署配置:"
+        echo "📤 自动执行: $AUTO_EXECUTE"
+        if [ -n "$OUTPUT_FILE" ]; then
+          echo "📥 输出文件: $OUTPUT_FILE"
         fi
 
     - name: 🚀 部署到阿里云服务器
@@ -88,10 +59,7 @@ jobs:
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         command_timeout: "600s"
         script: |
-          echo "🚀 开始部署数据库到阿里云服务器..."
-          echo "📦 部署类型: ${{ github.event.inputs.deploy_type || 'incremental' }}"
-          echo "📤 源环境: ${{ github.event.inputs.source_env || 'development' }}"
-          echo "📥 目标环境: ${{ github.event.inputs.target_env || 'production' }}"
+          echo "🚀 开始增量部署数据库到阿里云服务器..."
           
           # 检查 Node.js 是否安装
           if ! command -v node &> /dev/null; then
@@ -118,21 +86,7 @@ jobs:
           echo "🔍 MySQL 服务状态:"
           sudo systemctl status mysql --no-pager -l
           
-          # 创建数据库用户（如果不存在）
-          echo "🔧 配置数据库用户..."
-          sudo mysql -e "CREATE USER IF NOT EXISTS ${{ secrets.DB_USER }}@localhost IDENTIFIED BY 'Zhengwenguo0503.';" || true
-          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO ${{ secrets.DB_USER }}@localhost WITH GRANT OPTION;" || true
-          sudo mysql -e "FLUSH PRIVILEGES;" || true
-          
-          # 创建数据库（如果不存在）
-          echo "📊 创建数据库..."
-          sudo mysql -e "CREATE DATABASE IF NOT EXISTS \`${{ secrets.DB_NAME }}\`;" || true
-          
-          # 显示所有数据库
-          echo "🔍 当前所有数据库:"
-          sudo mysql -e "SHOW DATABASES;"
-          
-          echo "✅ 数据库准备完成"
+          echo "✅ 服务器环境准备完成"
 
     - name: 📤 上传项目文件
       uses: appleboy/scp-action@v0.1.7
@@ -153,11 +107,10 @@ jobs:
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         command_timeout: "600s"
         script: |
-          echo "🔄 执行数据库部署..."
+          echo "🔄 执行增量部署..."
           
-          DEPLOY_TYPE="${{ github.event.inputs.deploy_type || 'incremental' }}"
-          SOURCE_ENV="${{ github.event.inputs.source_env || 'development' }}"
-          TARGET_ENV="${{ github.event.inputs.target_env || 'production' }}"
+          AUTO_EXECUTE="${{ github.event.inputs.auto_execute || 'true' }}"
+          OUTPUT_FILE="${{ github.event.inputs.output_file || '' }}"
           
           # 进入项目目录
           cd /tmp
@@ -166,117 +119,58 @@ jobs:
           echo "📦 安装项目依赖..."
           npm install
           
-          # 设置环境变量
-          export DB_HOST="localhost"
-          export DB_USER="${{ secrets.DB_USER }}"
-          export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
-          export DB_NAME="${{ secrets.DB_NAME }}"
+          # 使用项目中的.env文件配置
+          echo "🔍 使用项目.env文件配置"
           
-          # 根据部署类型执行不同的命令
-          if [ "$DEPLOY_TYPE" = "incremental" ]; then
-            echo "🔄 执行增量部署: $SOURCE_ENV -> $TARGET_ENV"
-            
-            # 创建配置文件
-            mkdir -p src
-            echo "const configs = {" > src/db-config.js
-            echo "  development: {" >> src/db-config.js
-            echo "    host: process.env.DB_HOST || 'localhost'," >> src/db-config.js
-            echo "    user: process.env.DB_USER || 'root'," >> src/db-config.js
-            echo "    password: process.env.DB_PASSWORD || 'password'," >> src/db-config.js
-            echo "    database: process.env.DB_NAME || 'nest_db'," >> src/db-config.js
-            echo "    charset: 'utf8mb4'," >> src/db-config.js
-            echo "    port: process.env.DB_PORT || 3306" >> src/db-config.js
-            echo "  }," >> src/db-config.js
-            echo "  test: {" >> src/db-config.js
-            echo "    host: process.env.DB_HOST || 'localhost'," >> src/db-config.js
-            echo "    user: process.env.DB_USER || 'root'," >> src/db-config.js
-            echo "    password: process.env.DB_PASSWORD || 'password'," >> src/db-config.js
-            echo "    database: process.env.DB_NAME || 'nest_db_test'," >> src/db-config.js
-            echo "    charset: 'utf8mb4'," >> src/db-config.js
-            echo "    port: process.env.DB_PORT || 3306" >> src/db-config.js
-            echo "  }," >> src/db-config.js
-            echo "  staging: {" >> src/db-config.js
-            echo "    host: process.env.DB_HOST || 'localhost'," >> src/db-config.js
-            echo "    user: process.env.DB_USER || 'root'," >> src/db-config.js
-            echo "    password: process.env.DB_PASSWORD || 'password'," >> src/db-config.js
-            echo "    database: process.env.DB_NAME || 'nest_db_staging'," >> src/db-config.js
-            echo "    charset: 'utf8mb4'," >> src/db-config.js
-            echo "    port: process.env.DB_PORT || 3306" >> src/db-config.js
-            echo "  }," >> src/db-config.js
-            echo "  production: {" >> src/db-config.js
-            echo "    host: process.env.DB_HOST || 'localhost'," >> src/db-config.js
-            echo "    user: process.env.DB_USER || 'root'," >> src/db-config.js
-            echo "    password: process.env.DB_PASSWORD || 'password'," >> src/db-config.js
-            echo "    database: process.env.DB_NAME || 'nest_db_prod'," >> src/db-config.js
-            echo "    charset: 'utf8mb4'," >> src/db-config.js
-            echo "    port: process.env.DB_PORT || 3306" >> src/db-config.js
-            echo "  }" >> src/db-config.js
-            echo "};" >> src/db-config.js
-            echo "" >> src/db-config.js
-            echo "function getConfig(environment = 'development') {" >> src/db-config.js
-            echo "  const config = configs[environment];" >> src/db-config.js
-            echo "  if (!config) {" >> src/db-config.js
-            echo "    throw new Error(\`未知的环境配置: \${environment}\`);" >> src/db-config.js
-            echo "  }" >> src/db-config.js
-            echo "  return config;" >> src/db-config.js
-            echo "}" >> src/db-config.js
-            echo "" >> src/db-config.js
-            echo "function getAvailableEnvironments() {" >> src/db-config.js
-            echo "  return Object.keys(configs);" >> src/db-config.js
-            echo "}" >> src/db-config.js
-            echo "" >> src/db-config.js
-            echo "function validateConfig(config) {" >> src/db-config.js
-            echo "  const required = ['host', 'user', 'password', 'database'];" >> src/db-config.js
-            echo "  for (const field of required) {" >> src/db-config.js
-            echo "    if (!config[field]) {" >> src/db-config.js
-            echo "      throw new Error(\`缺少必需的配置字段: \${field}\`);" >> src/db-config.js
-            echo "    }" >> src/db-config.js
-            echo "  }" >> src/db-config.js
-            echo "  return true;" >> src/db-config.js
-            echo "}" >> src/db-config.js
-            echo "" >> src/db-config.js
-            echo "module.exports = {" >> src/db-config.js
-            echo "  getConfig," >> src/db-config.js
-            echo "  getAvailableEnvironments," >> src/db-config.js
-            echo "  validateConfig," >> src/db-config.js
-            echo "  configs" >> src/db-config.js
-            echo "};" >> src/db-config.js
-            
-            # 执行增量部署
-            node src/incremental-deploy.js "$SOURCE_ENV" "$TARGET_ENV" --execute
-            
-          elif [ "$DEPLOY_TYPE" = "full" ]; then
-            echo "🔄 执行完整部署: $SOURCE_ENV -> $TARGET_ENV"
-            
-            # 上传数据库文件（如果指定）
-            DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
-            if [ -f "/tmp/$DB_FILE" ]; then
-              echo "📤 使用指定的数据库文件: $DB_FILE"
-              cp "/tmp/$DB_FILE" .
-            else
-              echo "📤 导出源数据库..."
-              node src/export.js export -o database.sql
-            fi
-            
-            # 执行完整部署
-            chmod +x deploy.sh
-            ./deploy.sh full "$SOURCE_ENV" "$TARGET_ENV" -f
-            
+          # 检查.env文件是否存在
+          if [ -f ".env" ]; then
+            echo "✅ 找到.env文件，使用项目配置"
+            # 加载.env文件中的环境变量
+            export $(cat .env | grep -v '^#' | xargs)
           else
-            echo "❌ 未知的部署类型: $DEPLOY_TYPE"
-            exit 1
+            echo "⚠️  未找到.env文件，使用默认配置"
+            # 使用Secrets作为备用（如果配置了的话）
+            export DB_HOST="${{ secrets.DB_HOST || 'localhost' }}"
+            export DB_USER="${{ secrets.DB_USER || 'root' }}"
+            export DB_PASSWORD="${{ secrets.DB_PASSWORD || '' }}"
+            export DB_NAME="${{ secrets.DB_NAME || 'nest_db' }}"
+            export DB_PORT="${{ secrets.DB_PORT || '3306' }}"
           fi
+          
+          echo "🔍 环境变量检查:"
+          echo "   DB_HOST: $DB_HOST"
+          echo "   DB_USER: $DB_USER"
+          echo "   DB_PASSWORD: $DB_PASSWORD"
+          echo "   DB_NAME: $DB_NAME"
+          echo "   DB_PORT: $DB_PORT"
+          
+          # 构建部署命令
+          DEPLOY_CMD="node src/incremental-deploy.js"
+          
+          if [ "$AUTO_EXECUTE" = "true" ]; then
+            DEPLOY_CMD="$DEPLOY_CMD --execute"
+          fi
+          
+          if [ -n "$OUTPUT_FILE" ]; then
+            DEPLOY_CMD="$DEPLOY_CMD -o $OUTPUT_FILE"
+          fi
+          
+          echo "🚀 执行命令: $DEPLOY_CMD"
+          $DEPLOY_CMD
           
           # 验证部署结果
           echo "🔍 验证部署结果..."
           node -e "
             const mysql = require('mysql2/promise');
+            require('dotenv').config();
+            
             const config = {
               host: process.env.DB_HOST || 'localhost',
               user: process.env.DB_USER || 'root',
-              password: process.env.DB_PASSWORD || 'password',
+              password: process.env.DB_PASSWORD || '',
               database: process.env.DB_NAME || 'nest_db',
-              charset: 'utf8mb4'
+              charset: 'utf8mb4',
+              port: process.env.DB_PORT || 3306
             };
             
             mysql.createConnection(config)
@@ -297,10 +191,10 @@ jobs:
               });
           "
           
-          echo "🎉 数据库部署完成！"
-          echo "🌐 数据库地址: ${{ secrets.ALIYUN_HOST }}:3306"
-          echo "📊 数据库名称: ${{ secrets.DB_NAME }}"
-          echo "🔧 部署类型: $DEPLOY_TYPE"
+          echo "🎉 增量部署完成！"
+          echo "🌐 数据库地址: $DB_HOST:$DB_PORT"
+          echo "📊 数据库名称: $DB_NAME"
+          echo "🔧 部署类型: incremental"
 
     - name: 🔄 重启应用
       uses: appleboy/ssh-action@v1.0.3
