--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -119,22 +119,24 @@ jobs:
           echo "📦 安装项目依赖..."
           npm install
           
-          # 使用项目中的.env文件配置
-          echo "🔍 使用项目.env文件配置"
+          # 使用GitHub Secrets配置数据库连接
+          echo "🔍 使用GitHub Secrets配置数据库连接"
           
-          # 检查.env文件是否存在
-          if [ -f ".env" ]; then
-            echo "✅ 找到.env文件，使用项目配置"
-            # 加载.env文件中的环境变量
-            export $(cat .env | grep -v '^#' | xargs)
-          else
-            echo "⚠️  未找到.env文件，使用默认配置"
-            # 使用Secrets作为备用（如果配置了的话）
-            export DB_HOST="${{ secrets.DB_HOST || 'localhost' }}"
-            export DB_USER="${{ secrets.DB_USER || 'root' }}"
-            export DB_PASSWORD="${{ secrets.DB_PASSWORD || '' }}"
-            export DB_NAME="${{ secrets.DB_NAME || 'nest_db' }}"
-            export DB_PORT="${{ secrets.DB_PORT || '3306' }}"
+          # 设置环境变量
+          export DB_HOST="${{ secrets.DB_HOST }}"
+          export DB_USER="${{ secrets.DB_USER }}"
+          export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+          export DB_NAME="${{ secrets.DB_NAME }}"
+          export DB_PORT="${{ secrets.DB_PORT || '3306' }}"
+          
+          # 检查必要的环境变量是否设置
+          if [ -z "$DB_HOST" ] || [ -z "$DB_USER" ] || [ -z "$DB_NAME" ]; then
+            echo "❌ 错误：缺少必要的数据库配置"
+            echo "请确保在GitHub Secrets中配置了以下变量："
+            echo "  - DB_HOST"
+            echo "  - DB_USER" 
+            echo "  - DB_NAME"
+            exit 1
           fi
           
           echo "🔍 环境变量检查:"
@@ -158,19 +160,26 @@ jobs:
           echo "🚀 执行命令: $DEPLOY_CMD"
           $DEPLOY_CMD
           
+          # 检查部署结果
+          if [ $? -ne 0 ]; then
+            echo "❌ 增量部署执行失败"
+            exit 1
+          fi
+          
+          echo "✅ 增量部署执行成功"
+          
           # 验证部署结果
           echo "🔍 验证部署结果..."
           node -e "
             const mysql = require('mysql2/promise');
-            require('dotenv').config();
             
             const config = {
-              host: process.env.DB_HOST || 'localhost',
-              user: process.env.DB_USER || 'root',
-              password: process.env.DB_PASSWORD || '',
-              database: process.env.DB_NAME || 'nest_db',
+              host: '$DB_HOST',
+              user: '$DB_USER',
+              password: '$DB_PASSWORD',
+              database: '$DB_NAME',
               charset: 'utf8mb4',
-              port: process.env.DB_PORT || 3306
+              port: $DB_PORT
             };
             
             mysql.createConnection(config)
