--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -2,7 +2,7 @@ name: 🚀 数据库部署
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
       - 'src/**'
       - '.github/workflows/deploy-database.yml'
@@ -25,6 +25,7 @@ on:
 jobs:
   deploy-database:
     runs-on: ubuntu-latest
+    timeout-minutes: 45  # 设置整个job的超时时间
     
     steps:
     - name: 📥 检出代码
@@ -50,43 +51,42 @@ jobs:
           echo "📥 输出文件: $OUTPUT_FILE"
         fi
 
-    - name: 🚀 部署到阿里云服务器
+    - name: 🚀 准备服务器环境
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.ALIYUN_HOST }}
         username: ${{ secrets.ALIYUN_USERNAME }}
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
-        command_timeout: "600s"
+        command_timeout: "1200s"  # 20分钟
         script: |
-          echo "🚀 开始增量部署数据库到阿里云服务器..."
+          echo "🛠️ 开始准备服务器环境..."
           
-          # 检查 Node.js 是否安装
-          if ! command -v node &> /dev/null; then
-            echo "📦 安装 Node.js..."
-            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-          else
-            echo "✅ Node.js 已安装: $(node --version)"
-          fi
+          # 1. 确保MySQL可远程访问
+          sudo mysql -e "CREATE USER IF NOT EXISTS 'deploy_user'@'%' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_PASSWORD }}';"
+          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'deploy_user'@'%';"
+          sudo mysql -e "FLUSH PRIVILEGES;"
           
-          # 检查 MySQL 是否安装
-          if ! command -v mysql &> /dev/null; then
-            echo "📦 安装 MySQL..."
-            sudo apt-get update
-            sudo apt-get install -y mysql-server
-            sudo systemctl start mysql
-            sudo systemctl enable mysql
-          else
-            echo "✅ MySQL 已安装"
-            sudo systemctl start mysql || true
-          fi
+          # 2. 修改MySQL配置
+          sudo sed -i 's/^bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mysql.conf.d/mysqld.cnf
+          sudo sed -i '/^skip-networking/d' /etc/mysql/mysql.conf.d/mysqld.cnf
           
-          # 检查 MySQL 服务状态
-          echo "🔍 MySQL 服务状态:"
-          sudo systemctl status mysql --no-pager -l
+          # 3. 开放防火墙
+          sudo ufw allow 3306/tcp || true
+          sudo systemctl restart mysql
           
-          echo "✅ 服务器环境准备完成"
+          # 4. 验证MySQL连接
+          mysql -h 127.0.0.1 -u deploy_user -p'${{ secrets.DB_PASSWORD }}' -e "SELECT 1" || {
+            echo "❌ MySQL本地连接测试失败";
+            sudo tail -n 50 /var/log/mysql/error.log;
+            exit 1;
+          }
+
+    - name: 📦 压缩项目文件
+      run: |
+        echo "🗜️ 压缩项目文件..."
+        tar --exclude='./node_modules' -czvf deploy.tar.gz .
+        ls -lh deploy.tar.gz
 
     - name: 📤 上传项目文件
       uses: appleboy/scp-action@v0.1.7
@@ -95,117 +95,65 @@ jobs:
         username: ${{ secrets.ALIYUN_USERNAME }}
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
-        source: "./"
+        source: "deploy.tar.gz"
         target: "/tmp/"
+        overwrite: true
 
-    - name: 🔄 执行部署
+    - name: 🔄 执行增量部署
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.ALIYUN_HOST }}
         username: ${{ secrets.ALIYUN_USERNAME }}
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
-        command_timeout: "600s"
+        command_timeout: "1800s"  # 30分钟
         script: |
-          echo "🔄 执行增量部署..."
+          set -e  # 任何错误立即退出
+          echo "🔄 开始增量部署..."
           
-          AUTO_EXECUTE="${{ github.event.inputs.auto_execute || 'true' }}"
-          OUTPUT_FILE="${{ github.event.inputs.output_file || '' }}"
-          
-          # 进入项目目录
+          # 1. 解压项目文件
           cd /tmp
+          tar -xzvf deploy.tar.gz
           
-          # 安装依赖
-          echo "📦 安装项目依赖..."
-          npm install
+          # 2. 安装生产依赖（忽略devDependencies）
+          npm install --production
           
-          # 使用GitHub Secrets配置数据库连接
-          echo "🔍 使用GitHub Secrets配置数据库连接"
+          # 3. 加载环境变量
+          export $(grep -v '^#' .env | xargs)
           
-          # 设置环境变量
-          export DB_HOST="${{ secrets.DB_HOST }}"
-          export DB_USER="${{ secrets.DB_USER }}"
-          export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
-          export DB_NAME="${{ secrets.DB_NAME }}"
-          export DB_PORT="${{ secrets.DB_PORT || '3306' }}"
+          # 4. 带重试机制的部署
+          for attempt in {1..3}; do
+            echo "🔄 尝试 $attempt/3..."
+            if node src/incremental-deploy.js \
+              --host "$DB_HOST" \
+              --user "deploy_user" \
+              --password "$DB_PASSWORD" \
+              --database "$DB_NAME" \
+              --port "$DB_PORT" \
+              $([[ "${{ github.event.inputs.auto_execute }}" == "true" ]] && echo "--execute") \
+              $([[ -n "${{ github.event.inputs.output_file }}" ]] && echo "-o ${{ github.event.inputs.output_file }}"); then
+              echo "✅ 部署成功"
+              break
+            else
+              echo "⚠️ 尝试 $attempt 失败"
+              sleep 10
+              if [ $attempt -eq 3 ]; then
+                echo "❌ 所有重试均失败"
+                exit 1
+              fi
+            fi
+          done
           
-          # 检查必要的环境变量是否设置
-          if [ -z "$DB_HOST" ] || [ -z "$DB_USER" ] || [ -z "$DB_NAME" ]; then
-            echo "❌ 错误：缺少必要的数据库配置"
-            echo "请确保在GitHub Secrets中配置了以下变量："
-            echo "  - DB_HOST"
-            echo "  - DB_USER" 
-            echo "  - DB_NAME"
-            exit 1
-          fi
-          
-          echo "🔍 环境变量检查:"
-          echo "   DB_HOST: $DB_HOST"
-          echo "   DB_USER: $DB_USER"
-          echo "   DB_PASSWORD: $DB_PASSWORD"
-          echo "   DB_NAME: $DB_NAME"
-          echo "   DB_PORT: $DB_PORT"
-          
-          # 构建部署命令
-          DEPLOY_CMD="node src/incremental-deploy.js"
-          
-          if [ "$AUTO_EXECUTE" = "true" ]; then
-            DEPLOY_CMD="$DEPLOY_CMD --execute"
-          fi
-          
-          if [ -n "$OUTPUT_FILE" ]; then
-            DEPLOY_CMD="$DEPLOY_CMD -o $OUTPUT_FILE"
-          fi
-          
-          echo "🚀 执行命令: $DEPLOY_CMD"
-          $DEPLOY_CMD
-          
-          # 检查部署结果
-          if [ $? -ne 0 ]; then
-            echo "❌ 增量部署执行失败"
-            exit 1
-          fi
-          
-          echo "✅ 增量部署执行成功"
-          
-          # 验证部署结果
-          echo "🔍 验证部署结果..."
-          node -e "
-            const mysql = require('mysql2/promise');
-            
-            const config = {
-              host: '$DB_HOST',
-              user: '$DB_USER',
-              password: '$DB_PASSWORD',
-              database: '$DB_NAME',
-              charset: 'utf8mb4',
-              port: $DB_PORT
-            };
-            
-            mysql.createConnection(config)
-              .then(connection => {
-                return connection.execute('SHOW TABLES')
-                  .then(([rows]) => {
-                    console.log('📊 数据库表数量:', rows.length);
-                    console.log('📋 表列表:');
-                    rows.forEach(row => {
-                      console.log('  -', Object.values(row)[0]);
-                    });
-                    return connection.end();
-                  });
-              })
-              .catch(error => {
-                console.error('❌ 验证失败:', error.message);
-                process.exit(1);
-              });
+          # 5. 验证部署结果
+          echo "🔍 验证数据库变更..."
+          mysql -h "$DB_HOST" -u deploy_user -p"$DB_PASSWORD" "$DB_NAME" -e "
+            SELECT table_name, table_rows 
+            FROM information_schema.tables 
+            WHERE table_schema = '$DB_NAME'
+            ORDER BY table_rows DESC;
           "
-          
-          echo "🎉 增量部署完成！"
-          echo "🌐 数据库地址: $DB_HOST:$DB_PORT"
-          echo "📊 数据库名称: $DB_NAME"
-          echo "🔧 部署类型: incremental"
 
-    - name: 🔄 重启应用
+    - name: 🔄 重启应用服务
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.ALIYUN_HOST }}
@@ -213,20 +161,16 @@ jobs:
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         script: |
-          echo "🔄 检查是否需要重启应用..."
-          
-          # 检查是否有应用需要重启
+          echo "🔄 重启应用服务..."
+          # 优雅重启PM2应用
           if command -v pm2 &> /dev/null; then
-            echo "🔄 重启 PM2 应用..."
-            pm2 restart all || echo "PM2 重启失败或无应用运行"
+            pm2 reload all --update-env || pm2 restart all
           fi
           
-          if command -v docker-compose &> /dev/null || command -v docker &> /dev/null; then
-            echo "🔄 重启 Docker 容器..."
-            docker-compose restart 2>/dev/null || docker compose restart 2>/dev/null || echo "Docker Compose 重启失败或无容器运行"
+          # 或者重启Docker容器
+          if command -v docker &> /dev/null; then
+            docker ps -q | xargs -I {} docker restart {} || true
           fi
-          
-          echo "✅ 应用重启检查完成"
 
     - name: 🧹 清理临时文件
       uses: appleboy/ssh-action@v1.0.3
@@ -237,5 +181,5 @@ jobs:
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         script: |
           echo "🧹 清理临时文件..."
-          rm -rf /tmp/*
-          echo "✅ 清理完成" 
+          rm -rf /tmp/deploy.tar.gz /tmp/node_modules
+          echo "🆗 清理完成"
